--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,21 +24,31 @@ workflows:
     - lumigo-orb/print_orb_versions:
         github_cli_version: *github_cli_version
         lumigo_orb_version: *lumigo_orb_version
-    - test
+
+    - test:
+        context:
+          - common
+          - golang
+
     - lumigo-orb/is_environment_available:
+        context: common
         filters:
           branches:
             ignore: master
     - lumigo-orb/be-deploy:
+        context: common
         requires:
           - lumigo-orb/is_environment_available
     - lumigo-orb/integration-test-prep:
+        context: common
         requires:
           - lumigo-orb/be-deploy
     - lumigo-orb/integration-test-limited-flows:
+        context: common
         requires:
           - lumigo-orb/integration-test-prep
     - lumigo-orb/integration-test-parallel:
+        context: common
         requires:
           - lumigo-orb/integration-test-limited-flows
     - lumigo-orb/workflow-completed-successfully:
@@ -47,6 +57,9 @@ workflows:
           - lumigo-orb/integration-test-parallel
 
     - create-push-release:
+        context:
+          - common
+          - golang
         filters:
           branches:
             only:
